<resources>
    <string name="app_name">SavEats</string>

    <string name="onboarding">Onboarding</string>
    <string name="lets_eat">"Let's Eat"</string>
    <string name="insert_value">Insert Value</string>
    <string name="next">Next</string>

    <string name="rice_meal">Rice Meal</string>
    <string name="bread">Bread</string>
    <string name="snacks">Snacks</string>
    <string name="beverages">Beverages</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="pescatarian">Pescatarian</string>
    <string name="halal">Halal</string>
    <string name="kosher">Kosher</string>
    <string name="gluten_free">Gluten-Free</string>
    <string name="dairy_free">Dairy-Free</string>
    <string name="nut_free">Nut-Free</string>
    <string name="soy_free">Soy-Free</string>
    <string name="seafood_free">Seafood-Free</string>
    <string name="low_carb">Low-Carb</string>
    <string name="low_fat">Low-Fat</string>
    <string name="high_protein">High-Protein</string>
    <string name="low_sugar">Low-Sugar</string>
    <string name="low_sodium">Low-Sodium</string>
    <string name="none">None</string>

    <string name="background_img1">Background Image 1</string>
    <string name="white_bg1">White Background 1</string>
    <string name="food_img">Food Image</string>
    <string name="food_name">Adobong Manok with Rice</string>
    <string name="price">Php 80</string>
    <string name="stall">Stall 20</string>
    <string name="know_more">Know More</string>
    <string name="try_again_btn">Try Again</string>

    <string name="macroutrients">Macroutrients</string>
    <string name="health_benefits">Health Benefits</string>
    <string name="ingredients">Ingredients</string>
    <string name="back">Back</string>
</resources>