<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/bg_1" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/white_bg1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.754"
        app:srcCompat="@drawable/output_bg2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:backgroundTint="#718255"
        android:fontFamily="@font/lilita_one"
        android:text="@string/back"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.964" />

    <Button
        android:id="@+id/button4"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:backgroundTint="#D8EDB5"
        android:fontFamily="@font/lilita_one"
        android:text="@string/try_again_btn"
        android:textColor="#718255"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.963" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="290dp"
        android:layout_height="110dp"
        android:background="@drawable/rounded_background"
        android:backgroundTint="#718255"
        android:fontFamily="@font/lilita_one"
        android:padding="16dp"
        android:text="@string/macroutrients"
        android:textColor="#FFFFFF"
        android:contentDescription="@string/macroutrients"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.833" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="290dp"
        android:layout_height="110dp"
        android:background="@drawable/rounded_background"
        android:backgroundTint="#718255"
        android:fontFamily="@font/lilita_one"
        android:padding="16dp"
        android:text="@string/ingredients"
        android:textColor="#FFFFFF"
        android:contentDescription="@string/ingredients"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.439" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="290dp"
        android:layout_height="110dp"
        android:background="@drawable/rounded_background"
        android:backgroundTint="#718255"
        android:fontFamily="@font/lilita_one"
        android:padding="16dp"
        android:text="@string/health_benefits"
        android:textColor="#FFFFFF"
        android:contentDescription="@string/health_benefits"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.637" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="289dp"
        android:layout_height="90dp"
        android:fontFamily="@font/lilita_one"
        android:text="@string/food_name"
        android:textColor="#718255"
        android:textSize="40sp"
        android:contentDescription="@string/food_name"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.145" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="135dp"
        android:layout_height="62dp"
        android:background="@drawable/rounded_background"
        android:backgroundTint="#E8F5DB"
        android:fontFamily="@font/lilita_one"
        android:gravity="center"
        android:text="@string/price"
        android:textColor="#718255"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.291" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="135dp"
        android:layout_height="62dp"
        android:background="@drawable/rounded_background"
        android:backgroundTint="#B6C99B"
        android:contentDescription="@string/stall"
        android:fontFamily="@font/lilita_one"
        android:gravity="center"
        android:text="@string/stall"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.878"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.292" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="180dp"
        android:layout_height="174dp"
        android:contentDescription="@string/background_img1"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/food_example" />

</androidx.constraintlayout.widget.ConstraintLayout>