<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Output">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/background_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/bg_1" />

    <ImageView
        android:id="@+id/output_bg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/white_bg1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/output_bg1" />

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:backgroundTint="#718255"
        android:fontFamily="@font/lilita_one"
        android:text="@string/try_again_btn"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/output_bg1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="247dp"
        android:layout_height="62dp"
        android:backgroundTint="#87986B"
        android:fontFamily="@font/lilita_one"
        android:text="@string/know_more"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/output_bg1"
        app:layout_constraintEnd_toEndOf="@+id/output_bg1"
        app:layout_constraintStart_toStartOf="@+id/output_bg1"
        app:layout_constraintTop_toTopOf="@+id/output_bg1"
        app:layout_constraintVertical_bias="0.955" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="225dp"
        android:layout_height="154dp"
        android:fontFamily="@font/lilita_one"
        android:gravity="center_horizontal"
        android:lineHeight="45dp"
        android:text="@string/food_name"
        android:textColor="#718255"
        android:textSize="50sp"
        android:contentDescription="@string/food_name"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.404" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="285dp"
        android:layout_height="237dp"
        android:contentDescription="@string/food_img"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.074"
        app:srcCompat="@drawable/food_example" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="247dp"
        android:layout_height="62dp"
        android:layout_marginTop="336dp"
        android:background="@drawable/rounded_background"
        android:backgroundTint="#E8F5DB"
        android:fontFamily="@font/lilita_one"
        android:gravity="center"
        android:text="@string/price"
        android:textColor="#718255"
        android:textSize="30sp"
        android:contentDescription="@string/price"
        app:layout_constraintEnd_toEndOf="@+id/output_bg1"
        app:layout_constraintStart_toStartOf="@+id/output_bg1"
        app:layout_constraintTop_toTopOf="@+id/output_bg1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="247dp"
        android:layout_height="62dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_background"
        android:backgroundTint="#B6C99B"
        android:contentDescription="@string/stall"
        android:fontFamily="@font/lilita_one"
        android:gravity="center"
        android:text="@string/stall"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="@+id/output_bg1"
        app:layout_constraintStart_toStartOf="@+id/output_bg1"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>