<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/background_img1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/budget_bg" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:background="@drawable/rounded_background"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/insert_value"
        android:ems="10"
        android:fontFamily="@font/lilita_one"
        android:hint="@string/insert_value"
        android:inputType="text"
        android:padding="20dp"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView8"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="@+id/imageView8"
        app:layout_constraintVertical_bias="0.743" />

    <Button
        android:id="@+id/button6"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:backgroundTint="#97A87C"
        android:contentDescription="@string/next"
        android:fontFamily="@font/lilita_one"
        android:text="@string/next"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="261dp"
        tools:layout_editor_absoluteY="677dp" />
</androidx.constraintlayout.widget.ConstraintLayout>